--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7923,13 +7923,10 @@ $defs:
         public_ip:
           type: str
           description: "Node IPv4 address/Mask.\n\nThis is used to get the public
-            IP (if known) when the device is behind a NAT.\n\nAs of now this is used
-            only for information purposes.\nThis IP can then be used for ACLs or other
-            use cases where the interface public IP is required.\n\nAVD uses the following
-            priority order to derive the public IP of an interface:\n  * For `wan_router`
-            (edge/transit): `public_ip` -> `ip_address`\n  * For `wan_rr` (pathfinders):
-            `wan_route_servers.path_groups.interfaces.ip_address` -> `public_ip` ->
-            `ip_address`."
+            IP (if known) when the device is behind a NAT.\nThis is used only for
+            `wan_rr` routers (AutoVPN RRs and Pathfinders) to determine the Public
+            IP\nwith the following preference:\n  `wan_route_servers.path_groups.interfaces.ip_address`\n
+            \     -> `l3_interfaces.public_ip`\n          -> `l3_interfaces.ip_address`"
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface
             name by default, but can also be specified.
