--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -38,13 +38,11 @@ $defs:
             Node IPv4 address/Mask.
 
             This is used to get the public IP (if known) when the device is behind a NAT.
-
-            As of now this is used only for information purposes.
-            This IP can then be used for ACLs or other use cases where the interface public IP is required.
-
-            AVD uses the following priority order to derive the public IP of an interface:
-              * For `wan_router` (edge/transit): `public_ip` -> `ip_address`
-              * For `wan_rr` (pathfinders): `wan_route_servers.path_groups.interfaces.ip_address` -> `public_ip` -> `ip_address`.
+            This is used only for `wan_rr` routers (AutoVPN RRs and Pathfinders) to determine the Public IP
+            with the following preference:
+              `wan_route_servers.path_groups.interfaces.ip_address`
+                  -> `l3_interfaces.public_ip`
+                      -> `l3_interfaces.ip_address`
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface name by default, but can also be specified.
           type: int
