--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -8608,6 +8608,4 @@ $defs:
                 "alternate" is converted to priority 2.
 
 
-                If not set, each path-group in `names` will be attributed its `default_preference`.
-
-                In that casem the `default_preference` cannot be "excluded".'
+                If not set, each path-group in `names` will be attributed its `default_preference`.'
