--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3637,7 +3637,7 @@ keys:
           default: true
         import_path_groups:
           type: list
-          description: List of [ath-groups to import in this path-group.
+          description: List of path-groups to import in this path-group.
           items:
             type: dict
             keys:
@@ -3648,6 +3648,29 @@ keys:
                 type: str
                 description: Optional, if not set, the path-group `name` is used as
                   local.
+        default_preference:
+          type: str
+          convert_types:
+          - int
+          description: 'Preference value used when a preference is not given for a
+            path-group in the `wan_virtual_topologies.policies` input or when
+
+            the path-group is used in an auto generated policy except if `excluded_from_default_policy`
+            is set to `true.
+
+
+            Valid values are 1-65535 | "preferred" | "alternate".
+
+
+            `preferred` is converted to priority 1.
+
+            `alternate` is converted to priority 2.'
+          default: preferred
+        excluded_from_default_policy:
+          type: bool
+          default: false
+          description: When set to `true`, the path-group is excluded from AVD auto
+            generated policies.
         dps_keepalive:
           type: dict
           description: Period between the transmission of consecutive keepalive messages,
@@ -8577,10 +8600,12 @@ $defs:
               type: str
               convert_types:
               - int
-              description: 'Valid values are 1-255 | preferred | alternate.
+              description: 'Valid values are 1-65535 | "preferred" | "alternate".
 
 
-                preferred is converted to priority 1.
+                "preferred" is converted to priority 1.
 
-                alternate is converted to priority 2.'
-              default: preferred
+                "alternate" is converted to priority 2.
+
+
+                If not set, each path-group in `names` will be attributed its `default_preference`.'
