--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder.yml
@@ -332,6 +332,8 @@ router_path_selection:
     id: 103
   - name: Satellite
     id: 104
+  - name: AWS
+    id: 105
   - name: LAN_HA
     id: 65535
     flow_assignment: lan
@@ -340,20 +342,27 @@ router_path_selection:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
     - name: LAN_HA
-    - name: INET
     - name: MPLS
+    - name: INET
+    - name: Equinix
+      priority: 2
+    - name: Satellite
+      priority: 2
+    - name: AWS
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
     - name: LAN_HA
     - name: MPLS
     - name: INET
+    - name: Equinix
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
     - name: INET
     - name: Equinix
+      priority: 2
     - name: MPLS
-      priority: 42
+      priority: 4223
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
     - name: LAN_HA
@@ -391,8 +400,13 @@ router_path_selection:
   - name: LB-DEFAULT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
-    - name: INET
     - name: MPLS
+    - name: INET
+    - name: Equinix
+      priority: 2
+    - name: Satellite
+      priority: 2
+    - name: AWS
 router_traffic_engineering:
   enabled: true
 stun:
@@ -542,6 +556,9 @@ metadata:
     - name: Satellite
       carriers:
       - name: Inmrasat
+    - name: AWS
+      carriers:
+      - name: AWS-1
     regions:
     - name: AVD_Land_West
       id: 42
@@ -574,9 +591,15 @@ metadata:
         pathgroups:
         - name: LAN_HA
           preference: preferred
+        - name: MPLS
+          preference: preferred
         - name: INET
           preference: preferred
-        - name: MPLS
+        - name: Equinix
+          preference: alternate
+        - name: Satellite
+          preference: alternate
+        - name: AWS
           preference: preferred
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
@@ -587,6 +610,8 @@ metadata:
           preference: preferred
         - name: INET
           preference: preferred
+        - name: Equinix
+          preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -595,7 +620,7 @@ metadata:
         - name: INET
           preference: preferred
         - name: Equinix
-          preference: preferred
+          preference: alternate
         - name: MPLS
           preference: alternate
     - name: PROD
@@ -644,6 +669,8 @@ metadata:
           preference: preferred
         - name: INET
           preference: preferred
+        - name: Equinix
+          preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -652,7 +679,7 @@ metadata:
         - name: INET
           preference: preferred
         - name: Equinix
-          preference: preferred
+          preference: alternate
         - name: MPLS
           preference: alternate
     - name: TRANSIT
@@ -684,7 +711,13 @@ metadata:
         pathgroups:
         - name: LAN_HA
           preference: preferred
+        - name: MPLS
+          preference: preferred
         - name: INET
           preference: preferred
-        - name: MPLS
+        - name: Equinix
+          preference: alternate
+        - name: Satellite
+          preference: alternate
+        - name: AWS
           preference: preferred
