--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router1.yml
@@ -128,6 +128,14 @@ ethernet_interfaces:
   flow_tracker:
     hardware: WAN-FLOW-TRACKER
   _custom_key: custom_value
+- name: Ethernet1
+  peer_type: l3_interface
+  ip_address: 10.9.9.9/31
+  shutdown: false
+  type: routed
+  description: Comcast_999
+  flow_tracker:
+    hardware: WAN-FLOW-TRACKER
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -296,9 +304,20 @@ router_bfd:
 router_path_selection:
   tcp_mss_ceiling:
     ipv4_segment_size: auto
+  path_groups:
+  - name: INET
+    id: 100
+    local_interfaces:
+    - name: Ethernet1
+    dynamic_peers:
+      enabled: true
   load_balance_policies:
   - name: LB-DEFAULT-POLICY-DEFAULT
+    path_groups:
+    - name: INET
   - name: LB-DEFAULT-POLICY-CONTROL-PLANE
+    path_groups:
+    - name: INET
 router_traffic_engineering:
   enabled: true
 application_traffic_recognition:
@@ -351,9 +370,22 @@ metadata:
       tags:
       - name: Type
         value: lan
+    - interface: Ethernet1
+      tags:
+      - name: Type
+        value: wan
+      - name: Carrier
+        value: Comcast
+      - name: Circuit
+        value: '999'
   cv_pathfinder:
     role: edge
     vtep_ip: 192.168.2.1
     region: region1
     zone: region1-ZONE
     site: site1
+    interfaces:
+    - name: Ethernet1
+      carrier: Comcast
+      circuit_id: '999'
+      pathgroup: INET
