--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-rr2.cfg
@@ -24,7 +24,8 @@ router path-selection
    path-group MPLS id 100
    !
    load-balance policy LB-DEFAULT-AUTOVPN-POLICY-CONTROL-PLANE
-      path-group INET
+      path-group MPLS
+      path-group INET priority 42
    !
    load-balance policy LB-DEFAULT-AUTOVPN-POLICY-IT
       path-group MPLS
