--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -104,6 +104,13 @@ router adaptive-virtual-topology
 router path-selection
    tcp mss ceiling ipv4 ingress
    !
+   path-group AWS id 105
+      ipsec profile CP-PROFILE
+      !
+      local interface Ethernet2
+      !
+      peer dynamic
+   !
    path-group Satellite id 104
       ipsec profile CP-PROFILE
       keepalive interval auto
@@ -113,14 +120,15 @@ router path-selection
       peer dynamic
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
-      path-group Satellite
+      path-group Satellite priority 2
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-DEFAULT
    !
    load-balance policy LB-DEFAULT-AVT-POLICY-VIDEO
    !
    load-balance policy LB-DEFAULT-POLICY-DEFAULT
-      path-group Satellite
+      path-group AWS
+      path-group Satellite priority 2
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
    !
@@ -183,6 +191,14 @@ interface Dps1
 !
 interface Ethernet1
    description Inmrasat_S511
+   no shutdown
+   no switchport
+   flow tracker hardware WAN-FLOW-TRACKER
+   ip address dhcp
+   dhcp client accept default-route
+!
+interface Ethernet2
+   description AWS-1_212
    no shutdown
    no switchport
    flow tracker hardware WAN-FLOW-TRACKER
