--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -365,6 +365,8 @@ router_path_selection:
     id: 103
   - name: Satellite
     id: 104
+  - name: AWS
+    id: 105
   - name: LAN_HA
     id: 65535
     flow_assignment: lan
@@ -373,20 +375,27 @@ router_path_selection:
   - name: LB-DEFAULT-AVT-POLICY-CONTROL-PLANE
     path_groups:
     - name: LAN_HA
-    - name: INET
     - name: MPLS
+    - name: INET
+    - name: Equinix
+      priority: 2
+    - name: Satellite
+      priority: 2
+    - name: AWS
   - name: LB-DEFAULT-AVT-POLICY-VIDEO
     path_groups:
     - name: LAN_HA
     - name: MPLS
     - name: INET
+    - name: Equinix
   - name: LB-DEFAULT-AVT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
     - name: INET
     - name: Equinix
+      priority: 2
     - name: MPLS
-      priority: 42
+      priority: 4223
   - name: LB-PROD-AVT-POLICY-VOICE
     path_groups:
     - name: LAN_HA
@@ -424,8 +433,13 @@ router_path_selection:
   - name: LB-DEFAULT-POLICY-DEFAULT
     path_groups:
     - name: LAN_HA
-    - name: INET
     - name: MPLS
+    - name: INET
+    - name: Equinix
+      priority: 2
+    - name: Satellite
+      priority: 2
+    - name: AWS
 router_traffic_engineering:
   enabled: true
 stun:
@@ -561,6 +575,9 @@ metadata:
     - name: Satellite
       carriers:
       - name: Inmrasat
+    - name: AWS
+      carriers:
+      - name: AWS-1
     regions:
     - name: AVD_Land_West
       id: 42
@@ -593,9 +610,15 @@ metadata:
         pathgroups:
         - name: LAN_HA
           preference: preferred
+        - name: MPLS
+          preference: preferred
         - name: INET
           preference: preferred
-        - name: MPLS
+        - name: Equinix
+          preference: alternate
+        - name: Satellite
+          preference: alternate
+        - name: AWS
           preference: preferred
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
@@ -606,6 +629,8 @@ metadata:
           preference: preferred
         - name: INET
           preference: preferred
+        - name: Equinix
+          preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -614,7 +639,7 @@ metadata:
         - name: INET
           preference: preferred
         - name: Equinix
-          preference: preferred
+          preference: alternate
         - name: MPLS
           preference: alternate
     - name: PROD
@@ -663,6 +688,8 @@ metadata:
           preference: preferred
         - name: INET
           preference: preferred
+        - name: Equinix
+          preference: preferred
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -671,7 +698,7 @@ metadata:
         - name: INET
           preference: preferred
         - name: Equinix
-          preference: preferred
+          preference: alternate
         - name: MPLS
           preference: alternate
     - name: TRANSIT
@@ -703,7 +730,13 @@ metadata:
         pathgroups:
         - name: LAN_HA
           preference: preferred
+        - name: MPLS
+          preference: preferred
         - name: INET
           preference: preferred
-        - name: MPLS
+        - name: Equinix
+          preference: alternate
+        - name: Satellite
+          preference: alternate
+        - name: AWS
           preference: preferred
