--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2a-catalog.yml
@@ -94,6 +94,39 @@ anta.tests.connectivity:
       description: LLDP topology - validate peer and interface
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.8
+      repeat: 1
+      source: 10.255.255.9
+      vrf: default
+    result_overwrite:
+      categories:
+      - IP Reachability
+      custom_field: 'Source: dc1-leaf2a_Ethernet1 - Destination: dc1-spine1_Ethernet3'
+      description: ip reachability test p2p links
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.10
+      repeat: 1
+      source: 10.255.255.11
+      vrf: default
+    result_overwrite:
+      categories:
+      - IP Reachability
+      custom_field: 'Source: dc1-leaf2a_Ethernet2 - Destination: dc1-spine2_Ethernet3'
+      description: ip reachability test p2p links
+- VerifyReachability:
+    hosts:
+    - destination: 192.168.100.1
+      repeat: 1
+      source: 192.168.100.0
+      vrf: default
+    result_overwrite:
+      categories:
+      - IP Reachability
+      custom_field: 'Source: dc1-leaf2a_Ethernet6 - Destination: dc2-leaf2a_Ethernet6'
+      description: ip reachability test p2p links
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.255.0.5
