--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7946,10 +7946,11 @@ $defs:
         public_ip:
           type: str
           description: "Node IPv4 address/Mask.\n\nThis is used to get the public
-            IP (if known) when the device is behind a NAT.\nThis is used only for
-            `wan_rr` routers (AutoVPN RRs and Pathfinders) to determine the Public
-            IP\nwith the following preference:\n  `wan_route_servers.path_groups.interfaces.ip_address`\n
-            \     -> `l3_interfaces.public_ip`\n          -> `l3_interfaces.ip_address`"
+            IP (if known) when the device is behind NAT.\nThis is only used for `wan_rr`
+            routers (AutoVPN RRs and Pathfinders) to determine the Public IP\nwith
+            the following preference:\n  `wan_route_servers.path_groups.interfaces.ip_address`\n
+            \     -> `l3_interfaces.public_ip`\n          -> `l3_interfaces.ip_address`\n\nThe
+            determined Public IP is used by WAN routers when peering with this interface."
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface
             name by default, but can also be specified.
