--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -37,12 +37,14 @@ $defs:
           description: |-
             Node IPv4 address/Mask.
 
-            This is used to get the public IP (if known) when the device is behind a NAT.
-            This is used only for `wan_rr` routers (AutoVPN RRs and Pathfinders) to determine the Public IP
+            This is used to get the public IP (if known) when the device is behind NAT.
+            This is only used for `wan_rr` routers (AutoVPN RRs and Pathfinders) to determine the Public IP
             with the following preference:
               `wan_route_servers.path_groups.interfaces.ip_address`
                   -> `l3_interfaces.public_ip`
                       -> `l3_interfaces.ip_address`
+
+            The determined Public IP is used by WAN routers when peering with this interface.
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface name by default, but can also be specified.
           type: int
