Feat(eos_designs): Allow to disable IPsec on dynamic peers for a path-group avd (#3695)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
@@ -91,8 +91,8 @@ wan_mode: cv-pathfinder
 wan_route_servers: []
 wan_path_groups:
   - name: INET
-    ipsec: false
-    # TODO remove one once auto-id is implemented - for now required in schema
+    ipsec:
+      static_peers: false
     id: 100
 wan_carriers:
   - name: Comcast
