Feat(eos_designs): Add knob to allow p2p-vrfs uplink subnets redistribution in VRFs
* disabled by default
* WAN use case

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -355,6 +355,10 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:423
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
+ip prefix-list PL-UPLINK-SUBNETS-VRFS
+   seq 10 permit 172.17.0.5/32
+   seq 20 permit 172.17.0.7/32
+!
 ip prefix-list PL-WAN-HA-PEER-PREFIXES
    seq 10 permit 172.17.0.8/31
    seq 20 permit 172.17.0.10/31
@@ -399,6 +403,11 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
+!
+route-map RM-CONN-2-BGP-VRFS deny 15
+   match ip address prefix-list PL-UPLINK-SUBNETS-VRFS
+!
+route-map RM-CONN-2-BGP-VRFS permit 20
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
