--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-common-path-group.cfg
@@ -304,6 +304,9 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
+ip prefix-list PL-UPLINK-SUBNETS-VRFS
+   seq 10 permit 172.17.0.3/32
+!
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.42.2:511 additive
@@ -319,6 +322,11 @@ route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.42.2:511 additive
+!
+route-map RM-CONN-2-BGP-VRFS deny 15
+   match ip address prefix-list PL-UPLINK-SUBNETS-VRFS
+!
+route-map RM-CONN-2-BGP-VRFS permit 20
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
