--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -389,6 +389,9 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.43.1:422
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.43.0/24 eq 32
 !
+ip prefix-list PL-UPLINK-SUBNETS-VRFS
+   seq 10 permit 172.17.0.3/32
+!
 ip prefix-list PL-WAN-HA-PEER-PREFIXES
    seq 10 permit 172.17.0.0/31
 !
@@ -431,6 +434,11 @@ route-map RM-CONN-2-BGP permit 10
 !
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
+!
+route-map RM-CONN-2-BGP-VRFS deny 15
+   match ip address prefix-list PL-UPLINK-SUBNETS-VRFS
+!
+route-map RM-CONN-2-BGP-VRFS permit 20
 !
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
