--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -289,6 +289,10 @@ prefix_lists:
   sequence_numbers:
   - sequence: 10
     action: permit 172.17.0.2/31
+- name: PL-UPLINK-SUBNETS-VRFS
+  sequence_numbers:
+  - sequence: 10
+    action: permit 172.17.0.1/32
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -365,6 +369,14 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
+- name: RM-CONN-2-BGP-VRFS
+  sequence_numbers:
+  - sequence: 15
+    type: deny
+    match:
+    - ip address prefix-list PL-UPLINK-SUBNETS-VRFS
+  - sequence: 20
+    type: permit
 agents:
 - name: KernelFib
   environment_variables:
