--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -4863,6 +4863,20 @@ $defs:
             This setting can be overridden per VRF.
 
             '
+        redistribute_uplink_subnets_vrfs:
+          type: bool
+          default: false
+          description: 'Redistribute the connected subnet for the uplunk per VRF into
+            overlay BGP.
+
+            By default the uplink  subnets are not redistributed into the overlay
+            routing protocol per VRF.
+
+            Setting `redistribute_uplink_subnets_vrfs: true` under a tenant will change
+            this default and allow redistribution of these subnets for all VRFs in
+            the tenant.
+
+            This setting can be overridden per VRF.'
         bgp_peer_groups:
           documentation_options:
             table: network-services-vrfs-bgp-settings
@@ -5214,6 +5228,17 @@ $defs:
                   will change this default and/or override the tenant-wide setting.
 
                   '
+              redistribute_uplink_subnets_vrfs:
+                type: bool
+                default: false
+                description: 'Redistribute the connected subnet for the uplunk per
+                  VRF into overlay BGP.
+
+                  By default the uplink  subnets are not redistributed into the overlay
+                  routing protocol per VRF.
+
+                  Setting `redistribute_uplink_subnets_vrfs: true` under a VRF will
+                  change this default and/or override the tenant-wide setting.'
               mlag_ibgp_peering_vlan:
                 type: int
                 convert_types:
