--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
@@ -79,6 +79,14 @@ $defs:
             By default the iBGP peering subnet is redistributed into the overlay routing protocol per VRF.
             Setting `redistribute_mlag_ibgp_peering_vrfs: false` under a tenant will change this default to prevent redistribution of these subnets for all VRFs in the tenant.
             This setting can be overridden per VRF.
+        redistribute_uplink_subnets_vrfs:
+          type: bool
+          default: false
+          description: |-
+            Redistribute the connected subnet for the uplunk per VRF into overlay BGP.
+            By default the uplink  subnets are not redistributed into the overlay routing protocol per VRF.
+            Setting `redistribute_uplink_subnets_vrfs: true` under a tenant will change this default and allow redistribution of these subnets for all VRFs in the tenant.
+            This setting can be overridden per VRF.
         bgp_peer_groups:
           documentation_options:
             table: network-services-vrfs-bgp-settings
@@ -351,6 +359,13 @@ $defs:
                   Redistribute the connected subnet for the MLAG iBGP peering per VRF into overlay BGP.
                   By default the iBGP peering subnet is redistributed into the overlay routing protocol per VRF.
                   Setting `redistribute_mlag_ibgp_peering_vrfs: false` under a VRF will change this default and/or override the tenant-wide setting.
+              redistribute_uplink_subnets_vrfs:
+                type: bool
+                default: false
+                description: |-
+                  Redistribute the connected subnet for the uplunk per VRF into overlay BGP.
+                  By default the uplink  subnets are not redistributed into the overlay routing protocol per VRF.
+                  Setting `redistribute_uplink_subnets_vrfs: true` under a VRF will change this default and/or override the tenant-wide setting.
               mlag_ibgp_peering_vlan:
                 type: int
                 convert_types:
