--- a/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/WAN.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/inventory/group_vars/WAN.yml
@@ -14,3 +14,15 @@ wan_ipsec_profiles:
     shared_key: 0110100A480E0A0E231D1E
   data_plane:
     shared_key: 0110100A480E0A0E231D1E
+
+wan_path_groups:
+  - name: mpls
+    id: 101
+  - name: internet
+    id: 102
+
+wan_carriers:
+  - name: isp-1
+    path_group: internet
+  - name: mpls-sp-1
+    path_group: mpls
