--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1198,6 +1198,30 @@ keys:
       in the Fabric, **must** be an inventory group name.
     type: str
     required: true
+  fabric_sflow:
+    documentation_options:
+      table: fabric-settings
+    type: dict
+    description: Fabric-wide sFlow settings.
+    keys:
+      uplinks:
+        description: Enable sFlow on all fabric uplinks.
+        type: bool
+      downlinks:
+        description: Enable sFlow on all fabric downlinks.
+        type: bool
+      endpoints:
+        description: Enable sFlow on all endpoints ports.
+        type: bool
+      l3_edge:
+        description: Enable sFlow on all p2p_links defined under l3_edge.
+        type: bool
+      core_interfaces:
+        description: Enable sFlow on all p2p_links defined under core_interfaces.
+        type: bool
+      mlag_interfaces:
+        description: Enable sFlow on all MLAG peer interfaces.
+        type: bool
   generate_cv_tags:
     documentation_options:
       table: cloudvision-tags
