--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -767,6 +767,19 @@ keys:
       '
     type: bool
     default: true
+  default_interface_mtu:
+    documentation_options:
+      table: system-settings
+    type: int
+    convert_types:
+    - str
+    description: 'Default interface MTU configured on EOS under "interface defaults".
+
+      Can be overriden per platform under platform settings.
+
+      '
+    min: 68
+    max: 65535
   default_interfaces:
     documentation_options:
       table: default-interfaces
