Refactor(eos_designs): Make id mandatory for AVTs when mode is cv-pathfinder

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_virtual_topologies.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_virtual_topologies.schema.yml
@@ -128,6 +128,8 @@ keys:
                       ID of the AVT in each VRFs. ID must be unique across all virtual topologies in a policy.
                       ID 1 is reserved for the default_virtual_toplogy.
                       ID 254 is reserved for the control_plane_virtual_topology.
+
+                      `id` is required when `wan_mode` is 'cv-pathfinder'.
             default_virtual_topology:
               type: dict
               description: |-
