Refactor(eos_designs): Prevent empty path-groups for auto generated WAN policies

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -88,6 +88,8 @@ all:
         failure-duplicate-evpn-vlan-bundle-name:
         missing-avt-id-cv-pathfinder:
         missing-data-plane_cpu-allocation-max:
+        failure-no-path-group-in-default-policy:
+        failure-no-local-path-group-in-default-policy:
         ntp-settings-server-vrf-missing-mgmt-ip:
         ntp-settings-server-vrf-missing-inband-mgmt-interface:
         source-interfaces-domain-lookup-duplicate-vrf:
