--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3730,27 +3730,41 @@ keys:
       destinations:
         type: list
         primary_key: name
+        description: Configure telemetry output destinations.
         items:
           type: dict
           keys:
             name:
               type: str
+              description: InfluxDB connection name.
             vrf:
               type: str
             database:
               type: str
             policy:
               type: str
+              description: Confiure data retention policy.
             url:
               type: str
+              description: Configure URL for the destination.
             username:
               type: str
+              description: Configure login details with destination.
             password:
               type: str
+              description: Assign login password
             encryption:
-              type: int
+              type: str
+              convert_types:
+              - int
+              description: '0: Indicates that keystring is not encrypted.
+
+                7: Speciefies that HIDDEN key will follow.
+
+                8a: Speciefies that AES-256-GCM encrypted key will follow.'
       source_standard_enabled:
         type: bool
+        description: Enable standard set of telemetry.
       source_sockets:
         type: list
         primary_key: name
@@ -3759,6 +3773,7 @@ keys:
           keys:
             name:
               type: str
+              description: Label of the socket connection.
             connection_limit:
               type: int
               min: 0
@@ -3767,16 +3782,20 @@ keys:
               - str
             url:
               type: str
+              description: Configure socket URL.
       tags:
         type: list
         primary_key: name
+        description: Add extra tag to the telemetry output.
         items:
           type: dict
           keys:
             name:
               type: str
+              description: Specify the key of the global tag pair.
             value:
               type: str
+              description: Specify the value of the global tag pair.
   interface_defaults:
     type: dict
     keys:
