Add IPv6 MLAG configuration Support

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mlag-configuration.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mlag-configuration.yml
@@ -2,6 +2,8 @@ mlag_configuration:
   domain_id: sw1-sw2-mlag-domain
   local_interface: Vlan4094
   peer_address: 172.16.0.1
+  ipv4_peer_address: 172.16.0.1
+  ipv6_peer_address: 2001:db8::1
   peer_link: Port-Channel12
   heartbeat_interval: 5000
   dual_primary_detection_delay: 5
