Fixing the code and adding eos_cli_config_gen updates

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -119,6 +119,7 @@ interface Ethernet5
    pim ipv4 dr-priority 200
    pim ipv4 bfd
    isis enable ISIS_TEST
+   isis bfd
    isis circuit-type level-2
    isis metric 99
    no isis hello padding
