--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -248,6 +248,7 @@ interface Port-Channel110
    description isis_interface_knobs
    no switchport
    isis enable ISIS_TEST
+   isis bfd
    isis circuit-type level-2
    isis metric 99
    isis network point-to-point
