--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -192,6 +192,7 @@ ethernet_interfaces:
           count: 2.5
           interval: 10
     isis_enable: ISIS_TEST
+    isis_bfd: true
     isis_passive: false
     isis_metric: 99
     isis_network_point_to_point: true
