--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1B.cfg
@@ -52,6 +52,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.49/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -63,6 +64,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.51/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -74,6 +76,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.53/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -85,6 +88,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.55/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -104,6 +108,7 @@ interface Loopback0
    no shutdown
    ip address 192.168.255.11/32
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis passive
 !
 interface Loopback1
