--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2296,6 +2296,9 @@ keys:
         isis_enable:
           type: str
           description: ISIS instance.
+        isis_bfd:
+          type: bool
+          description: Enable BFD
         isis_passive:
           type: bool
         isis_metric:
@@ -5504,7 +5507,10 @@ keys:
                   type: bool
         isis_enable:
           type: str
-          description: ISIS instance name.
+          description: ISIS instance name
+        isis_bfd:
+          type: bool
+          description: Enable BFD
         isis_passive:
           type: bool
         isis_metric:
@@ -8144,7 +8150,10 @@ keys:
           type: bool
         isis_enable:
           type: str
-          description: ISIS instance.
+          description: ISIS instance
+        isis_bfd:
+          type: bool
+          description: Enable BFD
         isis_passive:
           type: bool
         isis_metric:
@@ -16214,7 +16223,10 @@ keys:
                       description: PIM hello interval in seconds.
         isis_enable:
           type: str
-          description: ISIS instance name.
+          description: ISIS instance name
+        isis_bfd:
+          type: bool
+          description: Enable BFD
         isis_passive:
           type: bool
         isis_metric:
