--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/port_channel_interfaces.schema.yml
@@ -409,7 +409,10 @@ keys:
           type: bool
         isis_enable:
           type: str
-          description: ISIS instance.
+          description: ISIS instance
+        isis_bfd:
+          type: bool
+          description: Enable BFD
         isis_passive:
           type: bool
         isis_metric:
