--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
@@ -69,6 +69,7 @@ interface Loopback0
    no shutdown
    ip address 1.2.3.1/32
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis passive
 !
 ip routing
@@ -82,7 +83,6 @@ router isis EVPN_UNDERLAY
    !
    address-family ipv4 unicast
       maximum-paths 4
-      bfd all-interfaces
    !
 !
 management api http-commands
