--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-LEAF2B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-LEAF2B.cfg
@@ -52,6 +52,7 @@ interface Port-Channel7
    switchport trunk allowed vlan none
    switchport mode trunk
    mlag 7
+   isis bfd
 !
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet3
@@ -60,6 +61,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.17/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -71,6 +73,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.19/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -82,6 +85,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.21/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -93,6 +97,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.23/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -117,6 +122,7 @@ interface Loopback0
    no shutdown
    ip address 192.168.255.7/32
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis passive
 !
 interface Loopback10
