--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3A.cfg
@@ -48,6 +48,7 @@ interface Port-Channel7
    switchport trunk allowed vlan none
    switchport mode trunk
    mlag 7
+   isis bfd
 !
 interface Ethernet1
    description P2P_LINK_TO_DC1-SPINE1_Ethernet4
@@ -56,6 +57,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.25/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -67,6 +69,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.27/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -78,6 +81,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.29/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -89,6 +93,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.31/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -118,6 +123,7 @@ interface Loopback0
    no shutdown
    ip address 192.168.255.8/32
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis passive
 !
 interface Loopback1
