--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-BL1A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-BL1A.yml
@@ -171,6 +171,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.41/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -184,6 +185,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.43/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -197,6 +199,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.45/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -210,6 +213,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.47/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -241,6 +245,7 @@ loopback_interfaces:
   ip_address: 192.168.255.10/32
   isis_enable: EVPN_UNDERLAY
   isis_passive: true
+  isis_bfd: true
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
