--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-LEAF1A.yml
@@ -115,6 +115,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.1/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -128,6 +129,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.3/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -141,6 +143,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.5/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -154,6 +157,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.7/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -164,6 +168,7 @@ loopback_interfaces:
   ip_address: 192.168.255.5/32
   isis_enable: EVPN_UNDERLAY
   isis_passive: true
+  isis_bfd: true
 router_isis:
   instance: EVPN_UNDERLAY
   log_adjacency_changes: true
