--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-LEAF2B.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-LEAF2B.yml
@@ -147,6 +147,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: none
   mlag: 7
+  isis_bfd: true
 ethernet_interfaces:
 - name: Ethernet5
   peer: DC1-LEAF2A
@@ -178,6 +179,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.17/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -191,6 +193,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.19/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -204,6 +207,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.21/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -217,6 +221,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.23/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -244,6 +249,7 @@ loopback_interfaces:
   ip_address: 192.168.255.7/32
   isis_enable: EVPN_UNDERLAY
   isis_passive: true
+  isis_bfd: true
 - name: Loopback10
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
