--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3A.yml
@@ -137,6 +137,7 @@ port_channel_interfaces:
   mode: trunk
   vlans: none
   mlag: 7
+  isis_bfd: true
 ethernet_interfaces:
 - name: Ethernet5
   peer: DC1-SVC3B
@@ -168,6 +169,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.25/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -181,6 +183,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.27/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -194,6 +197,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.29/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -207,6 +211,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.31/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -244,6 +249,7 @@ loopback_interfaces:
   ip_address: 192.168.255.8/32
   isis_enable: EVPN_UNDERLAY
   isis_passive: true
+  isis_bfd: true
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
