--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vxlan-interface.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vxlan-interface.cfg
@@ -18,6 +18,7 @@ interface Vxlan1
    vxlan controller-client
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
+   vxlan bridging vtep-to-vtep
    vxlan flood vtep learned data-plane
    vxlan vlan 110 vni 10110
    vxlan vlan 111 vni 10111
