--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -15637,6 +15637,8 @@ keys:
                 type: int
                 convert_types:
                 - str
+              vtep_to_vtep_bridging:
+                type: bool
               virtual_router_encapsulation_mac_address:
                 type: str
                 description: '"mlag-system-id" or ethernet_address (H.H.H)
