--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -86,6 +86,7 @@ all:
         failure-missing-evpn-multicast-l3-with-pim:
         failure-missing-evpn-multicast-peg-rps:
         failure-duplicate-evpn-vlan-bundle-name:
+        failure-no-local-path-group-in-default-policy:
         missing-avt-id-cv-pathfinder:
         missing-data-plane_cpu-allocation-max:
         failure-no-path-group-in-default-policy:
